# leadgen

./: Readme.md  leads.csv  pyproject.toml  requirements.txt  users.csv
api/: firebase_entry.py  server.py
engine/: google_search.py  lead_generator.py  maps.py  models.py  scraper.py  serp.py  utils.py
